RESOLVED FIXED 244860
Web Inspector: Inspector^2 can't be opened with "Allow Inspecting Web Inspector" setting enabled unless the DeveloperExtrasEnabled user default is also enabled
https://bugs.webkit.org/show_bug.cgi?id=244860
Summary Web Inspector: Inspector^2 can't be opened with "Allow Inspecting Web Inspect...
Patrick Angle
Reported 2022-09-06 14:49:36 PDT
Attachments
Patrick Angle
Comment 1 2022-09-06 15:08:20 PDT
EWS
Comment 2 2022-09-07 08:46:19 PDT
Committed 254236@main (e1f4fe1ba650): <https://commits.webkit.org/254236@main> Reviewed commits have been landed. Closing PR #4071 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.