Source/WebCore/inspector/InspectorFrontendHost.cpp
@@ -628,8 +628,12 @@ bool InspectorFrontendHost::isBeingInspected()
 
 void InspectorFrontendHost::setAllowsInspectingInspector(bool allow)
 {
-    if (m_frontendPage)
-        m_frontendPage->settings().setDeveloperExtrasEnabled(allow);
+    if (!m_frontendPage)
+        return;
+
+    m_frontendPage->settings().setDeveloperExtrasEnabled(allow);
+    if (m_client)
+        m_client->setInspectorPageDeveloperExtrasEnabled(m_frontendPage->settings().developerExtrasEnabled());
 }
 
 bool InspectorFrontendHost::supportsShowCertificate() const
